[package]
name = "mdview"
version = "0.1.0"
authors = ["Eric Ng <naclericny@gmail.com>"]
edition = "2018"
description = "Command line utility to quickly view markdown files in the browser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
pulldown-cmark = "0.8.0"
tiny_http = "0.7.0"
webbrowser = "0.5.5"
ispell = "0.3.1"
